crates/review-buddy/tests/snapshots/frames_v02__frame_settings_4_add_form_dusk_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  settings                                                                                                                                 Dusk
 Settings       ╭ Sources ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
                │ Where your pull and merge requests come from. Changes save to your config right away.                                                        │
› Sources       │                                                                                                                                              │
                │   on     name               host                   sign-in        all scope                      token                                       │
                │ › on  GH github.com         github.com             gh             yes liminal-hq, acme, you      ✓ smorris · expires 2027-03-01              │
                │   on  GL work               gitlab.work.ca         keyring        yes platform                   ✗ Couldn't sign in to gitlab.work.ca: the…  │
                │   off GL old-lab            gitlab.old.example     env:OLD_LAB_T… yes everything you can see     · not tested                                │
                │                                                                                                                                              │
                │ github.com  ·  github.com                                                                                                                    │
                │ Signs in with your gh sign-in                                                                                                                │
                │ Covers        liminal-hq, acme, you                                                                                                          │
                │ Last check    ✓ signed in as smorris · scopes repo, read:org · expires 2027-03-01                                                            │
                │ Queue         in All · drafts left out · tag cyan                                                                                            │
                │                         ╭ Add a source ────────────────────────────────────────────────────────────╮                                         │
                │                         │ › Name          gitlab.example.org                                       │                                         │
                │                         │   Forge         GitLab                                                   │                                         │
                │                         │   Host          gitlab.example.org                                       │                                         │
                │                         │   API address   (default for the host)                                   │                                         │
                │                         │   Sign in with  glab sign-in                                             │                                         │
                │                         │   Groups        (everything you can see)                                 │                                         │
                │                         │                                                                          │                                         │
                │                         │ Saved to your config. The token itself never goes in the file.           │                                         │
                │                         │                                                                          │                                         │
                │                         │ [ Save ⏎ ]  [ Cancel · esc ]                                             │                                         │
                │                         ╰──────────────────────────────────────────────────────────────────────────╯                                         │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 tab next field  ⏎ save  ←/→ change choice  esc cancel
